force-app/main/default/objects/ssot__CostBookEntry__dlm/fields/ssot__CostAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__CostAmount__c</fullName>
    <label>Cost</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CostAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>