force-app/main/default/objects/ssot__CostBookEntry__dlm/fields/ssot__CostBookId__c.field-meta.xml
<CustomField>
    <fullName>ssot__CostBookId__c</fullName>
    <label>Cost Book</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CostBookId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>