force-app/main/default/objects/ssot__CostBookEntry__dlm/fields/ssot__rel_1709922308163_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1709922308163_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CostBookEntry_CostBookId_map_CostBoo_rel</label>
    <referenceTo>ssot__CostBook__dlm</referenceTo>
    <relationshipLabel>CostBookEntry_CostBookId_map_CostBoo_rel</relationshipLabel>
    <relationshipName>rel_1709922308163_end</relationshipName>
    <type>Lookup</type>
</CustomField>